tests/chapter_18/invalid_types/initializers/initialize_struct_with_zero.c
struct s {
    int a;
};

int main(void) {
    struct s x = 0;
    return x.a;
}